--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      
+      - name: Checkout the code
+        uses: actions/checkout@v2
       - id: get-project
         name: Get project name
         run: echo "::set-output name=PROJECT::$(cat project-to-build)"
@@ -20,7 +21,7 @@ jobs:
           chmod +x gradlew
           ./gradlew assembleDebug --stacktrace
       - name: Upload APK
-        uses: actions/upload-artifact
+        uses: actions/upload-artifact@v2
         with:
           name: my-build-apk
           path: ./**/*.apk
